--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="icon" type="image/png" href="logo-header/Artboard 2 2.png">
     <title>Chhim Movie</title>
-    <link rel="stylesheet" href="style.css/header.css">
-    <link rel="stylesheet" href="style.css/general.css">
-    <link rel="stylesheet" href="style.css/content.css">
-    <link rel="stylesheet" href="style.css/footer.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="content.css">
+    <link rel="stylesheet" href="footer.css">
   </head>
 
   <body>
