--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
         <div class="movie-preview">
           <div class="movie-thumbnail-row">
-            <a href="movie-project-second-frame.html" target="_self">
-              <img class="movie-thumbnail" src="logo-header/movie1.png">
+            <a  class="movie-thumbnail" href="movie-project-second-frame.html" target="_self">
+              <img src="logo-header/movie1.png">
             </a>
             
           </div>
